fix overlap idk

--- a/css/clips.css
+++ b/css/clips.css
@@ -1,5 +1,6 @@
 h1 {
     font-family: 'Segoe UI';
+    font-size: larger;
 }
 p {
     font-size: larger;
@@ -11,11 +12,11 @@ sub {
     font-family: 'monolisa';
 }
 body {
-    background-color: #36393F;
+    background-color: #282a2d;
     color: #DCDDDE;
 }
 #top-bar {
-    height: 75px;
+    height: 50px;
     position:fixed;
     width: 100%;
     top: 0px;
